3week/egress/egress-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: egress-gateway
spec:
  selector:
    istio: egressgateway
  servers:
    - hosts:
        - jsonplaceholder.typicode.com
      port:
        name: http
        number: 80
        protocol: HTTP
