3week/egress/dr-egress.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: dr-egress
  namespace: istioinaction
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: json
